JS Client as staic of FastAPI

--- a/goit_python_web_fastapi_lect_01/templates/index.html
+++ b/goit_python_web_fastapi_lect_01/templates/index.html
@@ -51,9 +51,12 @@
 
   <main class="px-3">
     <h1>{{tilte}}</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <p class="lead">Cats and owners. Preparatory work based on lecture 12-02 for homework #12 in the FastAPI course at GoIT.</p>
     <p class="lead">
       <a href="docs/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+    </p>
+    <p class="lead">
+      <a href="static/client/index.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">JavaScript Client</a>
     </p>
   </main>
 
