--- a/tests/templates/cats_email.html
+++ b/tests/templates/cats_email.html
@@ -8,7 +8,7 @@
 <p>Hi {{fullname}},</p>
 <p>We invite you to visit our beautiful site</p>
 <p>
-    <a href="https://localhost:8000">
+    <a href="https://localhost:9090/confirm_emails/{{token}}">
         Click here
     </a>
 </p>
